# za-warudo

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.node.json
backend/: main.py
src/: App.tsx  index.css
