[project]
name = "za-warudo"
version = "0.1.0"
description = "FastAPI backend for the multi-break timer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.30.0,<0.32.0",
  "sqlmodel>=0.0.22,<0.0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]


